# WhacAMaker

./: README.md  TODOs
Docs/: ProgettoMakerFair2014.odt  ProgettoMakerFair2014.old.odt
Firmware/: Firmware.ino  joystick.cpp  joystick.h  microsmooth.cpp  microsmooth.h  moles.h  serialCommunication.cpp  serialCommunication.h  servoCalibration.h
Mechanics/: base biella fantasmino.scad  biella fantasma.scad  blocca cardine sportello fantasmini.scad  blocca tubo fantasmi.scad  braccio motore.scad  (+12 more)
PC/: CMakeLists.txt  resources.qrc
PC/include/: abstractGame.h  classicalGame.h  controller.h  gameController.h  gameItem.h  helpers.h  joystickCalibrationProcedure.h  joystickPointer.h  mainWindowEventFilter.h  matchColorGame.h  moleSpot.h  myRuntimeException.h  serialCommunication.h  testGame.h  whacAMaker.h  whackAMaker.h
PC/qml/: AnimatedElement.qml  AnimatedElementsPanel.qml  AnimatedElementsPanelWithItems.qml  AnimatedLabel.qml  Button.qml  ButtonPanel.qml  Calibration.qml  CalibrationTarget.qml  Configuration.qml  Game.qml  GameInformation.qml  GamePanel.qml  HighScores.qml  InputField.qml  JoystickCalibration.qml  JoystickPointer.qml  Keyboard.qml  MoleCell.qml  NameSelection.qml  SingleScore.qml  application.qml  test.qml
PC/src/: abstractGame.cpp  classicalGame.cpp  controller.cpp  gameController.cpp  gameItem.cpp  helpers.cpp  joystickCalibrationProcedure.cpp  joystickPointer.cpp  main.cpp  mainWindowEventFilter.cpp  matchColorGame.cpp  moleSpot.cpp  serialCommunication.cpp  testGame.cpp  whacAMaker.cpp  whackAMaker.cpp
PC/testGUI/: AnimatedElement.qml  AnimatedElementsPanel.qml  AnimatedElementsPanelWithItems.qml  Button.qml  ButtonPanel.qml  Configuration.qml  Game.qml  HighScores.qml  InputField.qml  LevelMenu.qml  MainMenu.qml  SettingsMenu.qml  SingleScore.qml  application.qml
(+1 files in other folders)
